# Greedy-Snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: GameEngine.h  drawer.h  food.h  snake.h  wall.h
include/thirdpart/: graphics.h
src/: CMakeLists.txt  GameEngine.cpp  drawer.cpp  food.cpp  main.cpp  snake.cpp  wall.cpp
